[package]
name = "birdy_bot"
version = "0.3.1"
description = "A API wrapper/Bot for the revolt API"
# licence
# homepage
# documentation
repository = "https://github.com/fishin-rod/Birdy-Bot"
authors = ["Fish"]
readme = "README.md"
keywords = ["API", "Revolt"]
edition = "2021"

[features]

[lib]
name = "revolt_rs"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.93"
tungstenite = {version = "0.18.0", features = ["native-tls"]}
url = "2.2.2"
image = "0.24.5"
dotenv = "0.15.0"
lazy_static = "1.4.0"
