[package]
name = "Ascent"
version = "0.4.0"
description = "A API wrapper/Bot for the revolt API"
# licence
# homepage
# documentation
repository = "https://github.com/fishin-rod/Birdy-Bot"
authors = ["Fish"]
readme = "README.md"
keywords = ["API", "Revolt"]
edition = "2021"

[features]

[lib]
name = "revolt_rs"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11.16", features = ["json", "multipart"] }
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tungstenite = {version = "0.18.0", features = ["native-tls"]}
url = "2.3.1"
image = "0.24.6"
plotters = "0.3.4"
dotenv = "0.15.0"
lazy_static = "1.4.0"
